# jeeves-capability-hello-world

./: .coveragerc  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  AUDIT_OSS_VIABILITY.md  CONTINUE_PHASE2.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  Cargo.toml  DOCUMENTATION_STRUCTURE.md  EVENT_FLOW_CLEAN_ARCHITECTURE.md  EVENT_FLOW_FIX_COMPLETE.md  FRONTEND_CHANGES_COMPLETE.md  FRONTEND_UNIFIED_EVENT_MIGRATION.md  FULL_CC_COVERAGE_ANALYSIS.md  FULL_CC_REPORT.csv  INDEX.md  NEXT_SESSION_PROMPT.md  OVERALL_STATUS.md  PHASE1_REVIEW_AND_PHASE2_AUDIT.md  PHASE2_COMPLETION_SUMMARY.md  PLAN.md  RCA_COVERAGE_ISSUE.md  README.md  README_airframe.md  SECURITY.md  SESSION_SUMMARY.md  STREAMING_IMPLEMENTATION_PLAN.md  TEST_STATUS.md  UNIFIED_EVENT_IMPLEMENTATION_SUMMARY.md  airframe_cc_full.json  app.py  app_bootstrap.py  chainlit_app.py  chat.html  conftest.py  full-python-test-results.txt  gradio_app.py  jeeves_capability_code_analyser  (+9 more)
.chainlit/: config.toml
.claude/: settings.local.json
airframe/: CONSTITUTION.md  __init__.py  client.py  endpoints.py  health.py  registry.py  selftest.py  telemetry.py  types.py
airframe/adapters/: __init__.py  base.py  llama_server.py  openai_chat.py
airframe/k8s/: __init__.py  registry.py  types.py
docker/: Dockerfile  Dockerfile.go-build  Dockerfile.hello-world  docker-compose.hello-world.yml  docker-compose.split.yml  docker-compose.yml  setup_hello_world.ps1  setup_hello_world.sh
docs/: AIRFRAME.md  CAPABILITY_CONSTITUTION.md  CAPABILITY_INTEGRATION_GUIDE.md  CAPABILITY_LAYER_AUDIT_REPORT.md  CONSTITUTION.md  INDEX.md  INTEGRATION_DEPLOYMENT_TESTING.md  JEEVES_CORE_RUNTIME_CONTRACT.md  PIPELINE_PATTERNS.md  envelope_json_schema.md
docs/analysis-reports/: COVERAGE_ANALYSIS.md  DOCUMENTATION_AUDIT_2026-01-23.md  JEEVES_CORE_ANALYSIS.md
docs/archive/: CRITICAL_TEST_IMPLEMENTATION_PLAN.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  README.md
jeeves-capability-code-analyser/: CONSTITUTION.md  __init__.py  airframe_bridge.py  airframe_settings.py  logging.py  pipeline_config.py  registration.py  server.py
jeeves-capability-code-analyser/agents/: __init__.py  context_builder.py  prompt_mapping.py
jeeves-capability-code-analyser/config/: __init__.py  context_bounds.py  deployment.py  tool_access.py
jeeves-capability-code-analyser/console/: __init__.py  handler.py  (+1 more)
jeeves_capability_code_analyser/: __init__.py
jeeves_capability_hello_world/: CONSTITUTION.md  __init__.py  _logging.py  _serialization.py  pipeline_config.py  registration.py
k8s/: README.md
prompts/: chatbot.respond.txt  chatbot.respond_streaming.txt  chatbot.understand.txt
requirements/: all.txt  base.txt  chainlit.txt  optional.txt  orchestrator.txt  test.txt
scripts/: Generate-Protos.ps1  Reset-Project.ps1  check_layer_boundaries.py  check_logging_invariants.py  generate_protos.bat  generate_protos.sh  test.ps1
src/: knowledge.rs  main.rs  tools.rs
tests/: __init__.py
(+149 files in other folders)
