[package]
name = "jeeves-capability-hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "src/main.rs"

[dependencies]
jeeves-core = { path = "../jeeves-core" }
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
